--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 	},
 	"require": {
 		"laravel/framework": "4.2.*",
-	  	"fzaninotto/faker": "1.4.0"
+	  	"fzaninotto/faker": "1.4.0",
+	  	"cartalyst/sentry": "2.1.*"
 	},
 	"autoload": {
 		"classmap": [
