--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,7 @@
 	},
 	"require": {
 		"laravel/framework": "4.2.*",
-	  	"fzaninotto/faker": "1.4.0",
-	  	"way/generators": "~2.0",
-		"guzzlehttp/guzzle": "~5.2"
+	  	"way/generators": "~2.0"
 	},
 	"autoload": {
 		"classmap": [
